fix: fix components target overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -34,6 +34,7 @@ inv-text:hover {
   height: 100%;
   transform: translate(-50%, -50%);
   pointer-events: auto;
+  box-sizing: border-box;
 }
 con-card {
   padding: 0 16px;
@@ -243,7 +244,7 @@ links-card a:active::before {
 /* Special elements */
 .jump-to-contents {
   position: fixed;
-  top: -40px;
+  top: -48px;
   left: 16px;
   transition: top 90ms cubic-bezier(0.4, 0.2, 0, 1);
   z-index: 9999;
@@ -265,7 +266,6 @@ links-card a:active::before {
 }
 .drawer__closer {
   display: none;
-  margin-bottom: 8px;
 }
 
 .drawer {
