--- a/styles/material-you.css
+++ b/styles/material-you.css
@@ -126,7 +126,9 @@ a:hover {
 .button {
   position: relative;
   display: inline-flex;
+  justify-content: center;
   align-items: center;
+  margin: 4px 0;
   padding: 0 24px;
   height: 40px;
   text-decoration: none;
@@ -135,6 +137,7 @@ a:hover {
   cursor: pointer;
   vertical-align: middle;
   user-select: none;
+  z-index: 0;
 }
 .button.filled {
   color: var(--md-sys-color-on-primary);
@@ -155,6 +158,7 @@ a:hover {
   cursor: pointer;
   vertical-align: middle;
   user-select: none;
+  z-index: 0;
 }
 .fab svg {
   width: 1em;
@@ -170,6 +174,7 @@ a:hover {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  margin: 4px;
   width: 40px;
   height: 40px;
   font-size: 1.25rem;
@@ -179,6 +184,7 @@ a:hover {
   cursor: pointer;
   vertical-align: middle;
   user-select: none;
+  z-index: 0;
 }
 .icon-button.standard {
   color: var(--md-sys-color-primary);
